button text wrap fix

--- a/src/stylus/style.styl
+++ b/src/stylus/style.styl
@@ -640,6 +640,7 @@ span.unit
     margin-left 1rem
     margin-top 1rem
     border 0
+    overflow-wrap break-word
     color #fff
     box-shadow rgba(0, 0, 0, 0.3) 0px 0px 5px
     text-shadow: rgba(0, 0, 0, 0.8) 0px 0px 3px
